<resources>
    <string name="app_name">NiloCursoFirebase</string>
    <string name="product_msg_loading">Preparando todo!!!</string>
    <string name="product_empty_cart">Carrito vacio</string>
    <string name="product_full_cart">Total: $%1$.2f USD</string>
    <string name="product_view_cart">Ver carrito</string>

    <string name="cart_title">Carrito de Compra</string>
    <string name="cart_pay">Pagar</string>
    <string name="datail_add_to_cart">Añadir al carrio</string>

    <string name="detail_quantity">Disponibles: %1$d</string>
    //para recibir un parametro que es un numero
    <string name="detail_total_price">&lt;b>&lt;big>Total: $%1$.2f USD&lt;/big>&lt;/b>&lt;br/>(%2$d x $%3$.2f)</string>     // para recibir 3 parametros
    <string name="order_track_shipment">Seguir envio</string>
    <string name="order_status">Estado: %1$s</string>
    <string name="order_id">ID: %1$s</string>
    <string name="order_chat_help">Necesitas ayuda?</string>
    <string name="order_title">Historial de compras</string>

    <string name="order_status_ordered">Pedido</string>
    <string name="order_status_preparing">Preparando</string>
    <string name="order_status_sent">Enviado</string>
    <string name="order_status_delivered">Entregado</string>
    <string name="order_status_unknow">Desconocido</string>

    <string name="track_title">Rastreo</string>
    <string name="hint_chat">escribe algo..</string>
    <string name="chat_title">Soporte</string>

    <string name="notification_channel_id_default">general</string>
    <string name="notification_channel_name_default">Generales</string>

    <string name="facebook_application_id" translatable="false">559056669661071</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb559056669661071</string>

</resources>